--- a/styles/app.css
+++ b/styles/app.css
@@ -62,11 +62,21 @@ main {
 	font-size: 14px;
 	font-weight: bold;
 	font-style: normal;
+    transition: background-color 300ms linear;
 }.btn:hover {
 	background-color:#b4ff69;
 }.btn:active {
 	position:relative;
 	top:1px;
+}
+
+.places-list li {
+    padding: 7px 12px;
+    margin-bottom: 1px;
+    background-color: #f1f1f1;
+    transition: background-color 300ms linear;
+}.places-list li:hover {
+    background-color: #ddd;
 }
 
 
